Make campaign admin page work

--- a/src/design/molecules/form/form.component.html
+++ b/src/design/molecules/form/form.component.html
@@ -1,52 +1,45 @@
-<form 
-  class="form"
-  [formGroup]="form" 
-  [enctype]="enctype"
->
-  <formly-form 
-    [form]="form" 
-    [fields]="usedFields" 
-    [model]="model"
+<form class="form" [formGroup]="form" [enctype]="enctype()">
+  <formly-form
+    [form]="form"
+    [fields]="_fields()"
+    [model]="model()"
   ></formly-form>
-  
-  <ng-container *ngIf="!disabled && enableSubmitButtons">
+
+  <ng-container *ngIf="!disabled() && enableSubmitButtons()">
     <div class="form__button-container">
       <!-- Cancel Button -->
-      <app-button 
+      <app-button
         class="form__button"
-        [type]="cancelButtonType"
+        [type]="cancelButtonType()"
         [icon]="'times'"
         [text]="'Cancel'"
         (click)="onCancel()"
       ></app-button>
-        
+
       <!-- Submit Button -->
-      <ng-container 
-        *ngIf="form.valid; 
-          then activeSubmitButton; 
-          else inactiveSubmitButton"
+      <ng-container
+        *ngIf="form.valid; then activeSubmitButton; else inactiveSubmitButton"
       ></ng-container>
     </div>
   </ng-container>
-
 </form>
 
 <ng-template #activeSubmitButton>
-  <app-button 
+  <app-button
     class="form__button"
-    [type]="submitButtonType" 
+    [type]="submitButtonType()"
     [text]="'Submit'"
-    [icon]="submitIcon"
+    [icon]="submitIcon()"
     [isSubmitButton]="true"
     (click)="onSubmit(undefined)"
   ></app-button>
 </ng-template>
 
 <ng-template #inactiveSubmitButton>
-  <app-button 
+  <app-button
     class="form__button"
-    placement="top" 
-    [type]="'DARK'" 
+    placement="top"
+    [type]="'DARK'"
     [ngbTooltip]="'The form is not yet correctly filled out!'"
     [tooltipClass]="'my-tooltip'"
     [icon]="'lock'"
