--- a/src/design/templates/character-create-update/character-create-update.component.html
+++ b/src/design/templates/character-create-update/character-create-update.component.html
@@ -1,11 +1,10 @@
 <app-page-container>
   <article class="container create-update">
     <h1 class="create-update__heading heading">
-      
       <span class="heading__text">
-        {{ state === 'CREATE' ? 'Create new Character' : 'Update Character' }}
-      </span>  
-      
+        {{ state() === "CREATE" ? "Create new Character" : "Update Character" }}
+      </span>
+
       <!-- Heading -->
       <div class="heading__edit-cancel">
         <app-button
@@ -15,42 +14,40 @@
         ></app-button>
       </div>
     </h1>
-  
+
     <!-- Form -->
     <ng-container [ngSwitch]="state">
-      <ng-container 
+      <ng-container
         *ngSwitchCase="'CREATE'"
         [ngTemplateOutlet]="createForm"
       ></ng-container>
-      <ng-container 
+      <ng-container
         *ngSwitchCase="'UPDATE'"
         [ngTemplateOutlet]="updateForm"
       ></ng-container>
-      <ng-container 
+      <ng-container
         *ngSwitchCase="'OUTDATED_UPDATE'"
         [ngTemplateOutlet]="outdatedUpdateForm"
       ></ng-container>
     </ng-container>
-    
   </article>
 </app-page-container>
 
 <ng-template #createForm>
   <app-form
     class="create-update__form"
-    [model]="userModel" 
-    [fields]="formlyFields" 
-    (formlySubmit)="onSubmit($event)" 
+    [model]="userModel()"
+    [fields]="formlyFields()"
+    (formlySubmit)="onSubmit($event)"
     (formlyCancel)="onCancel()"
   ></app-form>
 </ng-template>
 
 <ng-template #updateForm>
   <div class="create-update__form form">
-        
     <div class="form__player-classes">
-      <h4 class="form__heading"> {{userModel.name}}'s Classes </h4>
-      
+      <h4 class="form__heading">{{ userModel().name }}'s Classes</h4>
+
       <app-separator class="form__heading-separator"></app-separator>
 
       <!-- Add-Class-Badge -->
@@ -59,7 +56,7 @@
           [label]="'Class'"
           [entries]="characterClasses"
           [createOptions]="{
-            options: classOptions,
+            options: classOptions(),
             valueProp: 'pk',
             labelProp: 'name',
           }"
@@ -69,46 +66,43 @@
           (entryDelete)="removeClass.emit($event)"
         ></app-badge-list>
       </h6>
-    </div>    
-  
+    </div>
+
     <!-- Memberships -->
-    <div class="form__memberships">          
+    <div class="form__memberships">
       <!-- Form -->
       <ng-container [ngSwitch]="membershipFormState">
-        <ng-container 
+        <ng-container
           *ngSwitchCase="'CREATE'"
           [ngTemplateOutlet]="createMembershipForm"
         ></ng-container>
-        <ng-container 
+        <ng-container
           *ngSwitchCase="'DISPLAY'"
           [ngTemplateOutlet]="displayMembershipForm"
         ></ng-container>
       </ng-container>
-
     </div>
-    
 
     <div class="form__character-data">
-      <h4 class="form__heading"> Character Data </h4>
-      
+      <h4 class="form__heading">Character Data</h4>
+
       <app-separator class="form__heading-separator"></app-separator>
-      
+
       <app-form
-        [model]="userModel" 
-        [fields]="formlyFields" 
-        (formlySubmit)="onSubmit($event)" 
+        [model]="userModel()"
+        [fields]="formlyFields()"
+        (formlySubmit)="onSubmit($event)"
         (formlyCancel)="onCancel()"
       ></app-form>
     </div>
-    
   </div>
 </ng-template>
 
 <ng-template #createMembershipForm>
-  <h4 class="form__heading"> Create Organization Membership </h4>
-  
+  <h4 class="form__heading">Create Organization Membership</h4>
+
   <app-separator class="form__heading-separator"></app-separator>
-  
+
   <app-form
     [model]="organizationModel"
     [fields]="organizationFormlyFields"
@@ -118,10 +112,12 @@
 </ng-template>
 
 <ng-template #displayMembershipForm>
-  <h4 class="form__heading"> {{userModel.name}}'s Organization Memberships </h4>
+  <h4 class="form__heading">
+    {{ userModel().name }}'s Organization Memberships
+  </h4>
 
   <app-separator class="form__heading-separator"></app-separator>
-  
+
   <h6>
     <app-badge-list
       [label]="'Membership'"
@@ -142,9 +138,9 @@
 
 <ng-template #outdatedUpdateForm>
   <app-compare-form
-    [fields]="formlyFields"
-    [modelFromUser]="userModel"
-    [modelFromServer]="serverModel"
+    [fields]="formlyFields()"
+    [modelFromUser]="userModel()"
+    [modelFromServer]="serverModel()"
     (formlySubmit)="onSubmit($event)"
     (formlyCancel)="onCancel()"
   ></app-compare-form>
