--- a/src/design/templates/create-update/create-update.component.html
+++ b/src/design/templates/create-update/create-update.component.html
@@ -1,54 +1,56 @@
 <app-page-container>
-  <article class="container create-update">
+  <div class="container create-update">
     <h1 class="create-update__heading heading">
-      
       <span class="heading__text">
-        {{ heading }}
-      </span>  
+        {{ heading() }}
+      </span>
       <!-- Heading -->
       <div class="heading__edit-cancel">
         <app-button
-          (click)="onCancel()"
+          (click)="cancel.emit()"
           [icon]="'times'"
           [type]="'SECONDARY'"
         ></app-button>
       </div>
     </h1>
-  
+
+    <div class="create-update__form form">
+      <ng-content select="[sub-forms]"></ng-content>
+    </div>
+
     <!-- Form -->
-    <ng-container [ngSwitch]="state">
-      <ng-container 
+    <ng-container [ngSwitch]="state()">
+      <ng-container
         *ngSwitchCase="'CREATE'"
         [ngTemplateOutlet]="createUpdateForm"
       ></ng-container>
-      <ng-container 
+      <ng-container
         *ngSwitchCase="'UPDATE'"
         [ngTemplateOutlet]="createUpdateForm"
       ></ng-container>
-      <ng-container 
+      <ng-container
         *ngSwitchCase="'OUTDATED_UPDATE'"
         [ngTemplateOutlet]="outdatedUpdateForm"
       ></ng-container>
     </ng-container>
-    
-  </article>
+  </div>
 </app-page-container>
 
 <ng-template #createUpdateForm>
   <app-form
-    [model]="userModel" 
-    [fields]="formlyFields" 
-    (formlySubmit)="onSubmit($event)" 
-    (formlyCancel)="onCancel()"
+    [model]="userModel()"
+    [fields]="formlyFields()"
+    (formlySubmit)="onSubmit($event)"
+    (formlyCancel)="cancel.emit()"
   ></app-form>
 </ng-template>
 
 <ng-template #outdatedUpdateForm>
   <app-compare-form
-    [fields]="formlyFields"
-    [modelFromUser]="userModel"
-    [modelFromServer]="serverModel"
+    [fields]="formlyFields()"
+    [modelFromUser]="userModel()"
+    [modelFromServer]="serverModel()"
     (formlySubmit)="onSubmit($event)"
-    (formlyCancel)="onCancel()"
+    (formlyCancel)="cancel.emit()"
   ></app-compare-form>
 </ng-template>
