--- a/src/app/campaign/pages/general-overview-page/general-overview-page.component.html
+++ b/src/app/campaign/pages/general-overview-page/general-overview-page.component.html
@@ -1,14 +1,9 @@
-@let campaignName = campaignName$ | async;
+@let campaignName = campaignName$();
 @let overviewType = overviewType$ | async;
-@let canCreate = canCreate$ | async;
+@let canCreate = canCreate$;
 @let entries = entries$ | async;
 
-@if (
-  entries != null &&
-  campaignName != null &&
-  overviewType != null &&
-  canCreate != null
-) {
+@if (entries != null && campaignName != null && overviewType != null) {
   <app-general-overview
     [serverUrl]="serverUrl"
     [overviewType]="overviewType"
