--- a/src/app/general/pages/login-page/login-page.component.html
+++ b/src/app/general/pages/login-page/login-page.component.html
@@ -1,6 +1,6 @@
 <app-login
   [loginState]="(specialLoginState$ | async) ?? undefined"
-  [resetErrorMessage]="(resetErrorMessage$ | async) ?? undefined"
+  [resetErrorMessage]="store.resetErrorMessage() ?? undefined"
   (login)="onLogin($event)"
   (resetPassword)="onResetPassword($event)"
 ></app-login>
