--- a/src/app/general/pages/profile-page/profile-page.component.html
+++ b/src/app/general/pages/profile-page/profile-page.component.html
@@ -1,8 +1,15 @@
-<ng-container *ngIf="user$ | async as user">
+@let user = user$();
+
+@if (user != null) {
   <app-profile
     [user]="user"
-    [memberships]="(memberships$ | async) ?? []"
-    [canDeleteProfile]="!!(isCurrentUser$ | async)"
-    [campaignName]="(campaignName$ | async) ?? undefined"
+    [memberships]="memberships$() ?? []"
+    [canDeleteProfile]="isCurrentUser$()"
+    [campaignName]="campaignName$()"
+    [backUrl]="backUrl()"
+    (campaignLeave)="profilePageStore.leaveCampaign($event)"
+    (passwordUpdate)="profilePageStore.passwordUpdate($event)"
+    (profileDelete)="profilePageStore.profileDelete()"
+    (profileUpdate)="profilePageStore.profileUpdate($event)"
   ></app-profile>
-</ng-container>
+}
