Wire up campaign update page

--- a/src/app/campaign/pages/campaign-update-page/campaign-update-page.component.html
+++ b/src/app/campaign/pages/campaign-update-page/campaign-update-page.component.html
@@ -1,12 +1,10 @@
-@let campaign = campaign$ | async;
-@let mapOptions = mapOptions$ | async;
-@let serverModel = (serverModel$ | async) ?? undefined;
+@let campaignVal = campaign();
 
-@if (campaign != null && mapOptions != null) {
+@if (campaignVal != null) {
   <app-campaign-update
-    [userModel]="campaign"
-    [serverModel]="serverModel"
-    [mapOptions]="mapOptions"
+    [userModel]="campaignVal"
+    [serverModel]="serverModel()"
+    [mapOptions]="mapOptions() ?? []"
     (update)="updateCampaign($event)"
     (cancel)="cancel()"
   />
