Massive type cleanup

--- a/src/design/molecules/small-create-form/small-create-form.component.html
+++ b/src/design/molecules/small-create-form/small-create-form.component.html
@@ -12,7 +12,7 @@
 </ng-container>
 
 <ng-template #displayState>
-  <app-badge 
+  <app-badge
     class="display-form"
     [type]="'PRIMARY'"
     [icon]="'plus'"
@@ -23,42 +23,43 @@
 
 <ng-template #createState>
   <form class="form">
-    <select class="form-select"
-      style="width: unset;"
-      [name]="'select-' + labelProp"
+    <select
+      class="form-select"
+      style="width: unset"
+      [name]="selectFieldName()"
       [id]="'select'"
       (change)="onChange($event)"
     >
       <option [value]="undefined">-----</option>
       <ng-container *ngFor="let option of options; let i = index">
-        <option 
+        <option
           [value]="i"
-          [attr.selected]="option[valueProp] === userModel[valueProp] ? true : null"
+          [attr.selected]="
+            option[valueProp] === userModel[valueProp] ? true : null
+          "
           [attr.disabled]="isDisabledFunction(option) ? true : null"
         >
-          {{ option[labelProp] }}
+          {{ option[labelProp()] }}
         </option>
       </ng-container>
-    
     </select>
 
     <!-- Cancel Button -->
-    <app-button 
-      class="mx-2" 
+    <app-button
+      class="mx-2"
       [type]="cancelButtonType"
       [size]="'SMALL'"
       [icon]="'times'"
       (click)="onCancel()"
     ></app-button>
-      
+
     <!-- Submit Button -->
-    <app-button 
+    <app-button
       [type]="submitButtonType"
       [size]="'SMALL'"
       [icon]="'check'"
       [isSubmitButton]="true"
       (click)="onSubmit()"
     ></app-button>
-
   </form>
 </ng-template>
