--- a/src/design/templates/character-create-update/character-create-update.component.html
+++ b/src/design/templates/character-create-update/character-create-update.component.html
@@ -125,7 +125,7 @@
       [canCreate]="false"
       [canDelete]="true"
       (entryCreate)="addOrganizationMembership.emit($event)"
-      (entryDelete)="removeOrganizationMembership.emit($event)"
+      (entryDelete)="removeMembership($event)"
     ></app-badge-list>
     <app-badge
       [text]="'Add Membership'"
