--- a/src/app/administration/pages/site-administration-page/site-administration-page.component.html
+++ b/src/app/administration/pages/site-administration-page/site-administration-page.component.html
@@ -1,7 +1,13 @@
 <app-site-admin
-  [users]="(allSiteUsers$ | async) ?? undefined"
-  [campaigns]="(allSiteCampaigns$ | async) ?? undefined"
-  [allGroups]="(allPermissionGroups$ | async) ?? undefined"
-  [statistics]="(siteStatistics$ | async) ?? undefined"
+  [users]="allSiteUsers()"
+  [campaigns]="allSiteCampaigns()"
+  [allGroups]="allPermissionGroups()"
+  [statistics]="siteStatistics()"
   [serverUrl]="serverUrl"
+  (createCampaign)="store.createCampaign($event)"
+  (addUserGroup)="store.addUserToGroup($event.user, $event.groupId)"
+  (removeUserGroup)="store.removeUserFromGroup($event.user, $event.groupId)"
+  (deleteUser)="store.deleteUser($event)"
+  (createUser)="store.createUser($event)"
+  (downloadDatabase)="store.startDatabaseDownload()"
 ></app-site-admin>
