--- a/src/design/molecules/badge-list/badge-list.component.html
+++ b/src/design/molecules/badge-list/badge-list.component.html
@@ -1,7 +1,7 @@
 <div class="badge-list">
   <span class="badge-list__label"> {{ label }}: </span>
   <div class="badge-list__list">
-    <ng-container *ngFor="let entry of entries">
+    @for (entry of entries; track $index) {
       <app-interactive-badge
         class="badge-list__entry"
         [type]="'DARK'"
@@ -11,32 +11,35 @@
         [icon]="canDelete ? 'trash' : undefined"
         (iconClick)="onEntryDelete(entry)"
       ></app-interactive-badge>
-    </ng-container>
-  
+    }
+
     <!-- Connection Create Form -->
     <ng-container *ngIf="canCreate">
-      <ng-container [ngSwitch]="createKind">
-        <ng-container 
+      <ng-container [ngSwitch]="createKind()">
+        <ng-container
           *ngSwitchCase="'LINK'"
           [ngTemplateOutlet]="linkCreate"
         ></ng-container>
-        <ng-container 
+        <ng-container
           *ngSwitchCase="'SELECT'"
           [ngTemplateOutlet]="selectCreate"
         ></ng-container>
       </ng-container>
     </ng-container>
-  
   </div>
 </div>
 
 <ng-template #selectCreate>
-  <ng-container *ngIf="options && optionLabelProp && optionValueProp">
+  @let optionsVal = options();
+  @let optionLabelPropVal = optionLabelProp();
+  @let optionValuePropVal = optionValueProp();
+
+  <ng-container *ngIf="optionsVal && optionLabelPropVal && optionValuePropVal">
     <app-small-create-form
       class="badge-list__create-form"
-      [options]="options"
-      [labelProp]="optionLabelProp"
-      [valueProp]="optionValueProp"
+      [options]="optionsVal"
+      [labelProp]="optionLabelPropVal"
+      [valueProp]="optionValuePropVal"
       [badgeText]="'Add ' + label"
       [cancelButtonType]="'DARK'"
       (create)="onEntryCreate($event)"
@@ -45,7 +48,7 @@
 </ng-template>
 
 <ng-template #linkCreate>
-  <a [routerLink]="createLink" class="badge-list__create-form">
+  <a [routerLink]="createLink()" class="badge-list__create-form">
     <app-badge [type]="'PRIMARY'" [icon]="'plus'" [text]="'Add ' + label">
     </app-badge>
   </a>
