Convert Config Admin Page

--- a/src/app/administration/pages/config-administration-page/config-administration-page.component.html
+++ b/src/app/administration/pages/config-administration-page/config-administration-page.component.html
@@ -1,5 +1,5 @@
 <app-config-tables
-  [tableData]="(tableData$ | async) ?? {}"
+  [tableData]="tableData()"
   (loadTableEntries)="loadTableEntries($event)"
   (deleteTableEntry)="deleteTableEntry($event)"
   (createTableEntry)="createTableEntry($event)"
