--- a/src/design/templates/config-tables/config-tables.component.html
+++ b/src/design/templates/config-tables/config-tables.component.html
@@ -9,7 +9,7 @@
     </a>
 
     <!-- Sections -->
-    @for (table of tables; track table.kind) {
+    @for (table of tables(); track table.kind) {
       <div class="config-tables__section section">
         <!-- Section Heading -->
         <div class="section__heading heading">
