Fix up overview routes

--- a/src/app/campaign/pages/general-overview-page/general-overview-page.component.html
+++ b/src/app/campaign/pages/general-overview-page/general-overview-page.component.html
@@ -1,4 +1,4 @@
-@let campaignName = campaignName$();
+@let campaignName = campaignName$ | async;
 @let overviewType = overviewType$ | async;
 @let canCreate = canCreate$;
 @let entries = entries$ | async;
