--- a/src/design/organisms/quote-field/quote-field.component.html
+++ b/src/design/organisms/quote-field/quote-field.component.html
@@ -37,75 +37,67 @@
 <!-- Quote Create/Edit Form -->
 <ng-template #update>
   <app-card class="form-card">
-      <!-- Heading -->
-      <h5 class="form-card__heading">
-        Updating Quote {{ quote?.pk }}
-      </h5>
-  
-      <ng-container *ngIf="canUpdate && state === 'UPDATE'">
-        <app-form
-          class="form-card__form"
-          [model]="userModel"
-          [fields]="formlyFields"
-          [cancelButtonType]="'DARK'"
-          (formlySubmit)="onSubmit()"
-          (formlyCancel)="onCancel()"
-        ></app-form>
-      </ng-container>
-  
-      <ng-container *ngIf="state === 'UPDATE_OUTDATED'">
-        <app-compare-form
-          [fields]="formlyFields"
-          [modelFromUser]="userModel"
-          [modelFromServer]="serverModel"
-          [displayVertically]="true"
-          (updateSubmit)="onSubmit()"
-          (cancel)="changeState('DISPLAY', undefined)"
-        ></app-compare-form>  
-      </ng-container>
-      
+    <!-- Heading -->
+    <h5 class="form-card__heading">Updating Quote {{ quote?.pk }}</h5>
+
+    <ng-container *ngIf="canUpdate && state === 'UPDATE'">
+      <app-form
+        class="form-card__form"
+        [model]="userModel"
+        [fields]="formlyFields()"
+        [cancelButtonType]="'DARK'"
+        (formlySubmit)="onSubmit()"
+        (formlyCancel)="onCancel()"
+      ></app-form>
+    </ng-container>
+
+    <ng-container *ngIf="state === 'UPDATE_OUTDATED'">
+      <app-compare-form
+        [fields]="formlyFields()"
+        [modelFromUser]="userModel"
+        [modelFromServer]="serverModel"
+        [displayVertically]="true"
+        (updateSubmit)="onSubmit()"
+        (cancel)="changeState('DISPLAY', undefined)"
+      ></app-compare-form>
+    </ng-container>
   </app-card>
 </ng-template>
 
 <!-- Quote Create/Edit Form -->
 <ng-template #create>
   <app-card class="form-card">
-      <!-- Heading -->
-      <h5 class="form-card__heading">
-        Create Quote for <b>{{ character.name }}</b>
-      </h5>
-  
-      <!-- Form -->
-      <app-form
-        class="form-card__form"
-        [model]="userModel"
-        [fields]="formlyFields"
-        [cancelButtonType]="'DARK'"
-        (formlySubmit)="onSubmit()"
-        (formlyCancel)="onCancel()"
-      ></app-form>
-  
+    <!-- Heading -->
+    <h5 class="form-card__heading">
+      Create Quote for <b>{{ character.name }}</b>
+    </h5>
+
+    <!-- Form -->
+    <app-form
+      class="form-card__form"
+      [model]="userModel"
+      [fields]="formlyFields()"
+      [cancelButtonType]="'DARK'"
+      (formlySubmit)="onSubmit()"
+      (formlyCancel)="onCancel()"
+    ></app-form>
   </app-card>
 </ng-template>
 
 <!-- Quote Delete "Form" -->
 <ng-template #delete>
   <app-card class="form-card">
-    <h5 class="form-card__heading">
-      Delete this quote?
-    </h5>
-    
+    <h5 class="form-card__heading">Delete this quote?</h5>
+
     <blockquote class="form-card__quote quote">
-      <app-html-text 
+      <app-html-text
         class="quote__content"
         [text]="quote?.quote ?? ''"
       ></app-html-text>
-      
+
       <div class="quote__description">
         <ng-container *ngIf="quote?.description">
-          <app-html-text
-            [text]="'- ' + quote?.description"
-          ></app-html-text>
+          <app-html-text [text]="'- ' + quote?.description"></app-html-text>
         </ng-container>
 
         <ng-container *ngIf="!quote?.description">
@@ -113,17 +105,17 @@
         </ng-container>
       </div>
     </blockquote>
-    
+
     <div class="form-card__confirmation confirmation">
-      <app-button 
-        class="confirmation__button" 
+      <app-button
+        class="confirmation__button"
         [type]="'DARK'"
         [icon]="'times'"
         [text]="'No'"
         (click)="onCancel()"
       ></app-button>
-      <app-button 
-        class="confirmation__button" 
+      <app-button
+        class="confirmation__button"
         [type]="'DANGER'"
         [icon]="'trash'"
         [text]="'Yes'"
